--- a/README
+++ b/README
@@ -30,7 +30,8 @@ HostName ec2-54-149-70-41.us-west-2.compute.amazonaws.com
 User ubuntu
 IdentityFile ~/.ssh/RentedJR.pem
 
-# ssh into your unbuntu EC2 instance
+
+# ssh into your EC2 instance
 
 1 - Install node.js:
 --------------------
@@ -54,23 +55,17 @@ sudo npm install forever -g
 sudo npm install pm2 -g
 
 
+# On EC2 instance
 $ cd /home/ubuntu
 $ mkdir repo_rented_do_not_delete
-$ mkdir www
 $ cd repo_rented_do_not_delete/
 $ git init --bare
-$ mkdir hooks
-
 
 # On local machine in your root directory, Rented, of you local cloned or forked repo
-$ git remote add AWS_micro_server
+$ git remote add AWS_micro_server ssh://ubuntu@ec2-54-149-70-41.us-west-2.compute.amazonaws.com/repo_rented_do_not_delete
 
 
-# On EC2 instnace
-ubuntu@ip-172-31-30-26:~$ mkdir repo_rented_do_not_delete
-ubuntu@ip-172-31-30-26:~$ cd repo_rented_do_not_delete/
-ubuntu@ip-172-31-30-26:~$ git init --bare
-
+# On EC2 instance
 
 # modify the post-receive file by adding the following:
 vi /home/ubuntu/repo_rented_do_not_delete/hooks/post-receive
@@ -97,18 +92,18 @@ done
 
 ubuntu@ip-172-31-30-26:~$ chmod +x hooks/post-receive
 
-# create directories for the repo's branches you will push over to the EC2 instance from your local machine
-ubuntu@ip-172-31-30-26:~$ sudo mkdir /var/www/rented.co
-ubuntu@ip-172-31-30-26:~$ sudo mkdir /var/www/rented.co/public_html
-ubuntu@ip-172-31-30-26:~$ sudo mkdir /var/www/rented.co/experian
+# On EC2 instance, create directories for the repo's branches you will push over to the EC2 instance from your local machine
+$ sudo mkdir /var/www/rented.co
+$ sudo mkdir /var/www/rented.co/public_html
+$ sudo mkdir /var/www/rented.co/experian
 
 
 # Push code from your local machine
 $ git push AWS_micro_server master
 $ git push AWS_micro_server Experian
 
-# Check code was copied into the appropriate directoroy from the post-recieve hook
-ubuntu@ip-172-31-30-26:~/repo_rented_do_not_delete$ ls -lart /var/www/rented.co/public_html/
+# On EC2 instance, check code was copied into the appropriate directoroy from the post-recieve hook
+ubuntu@ip-172-31-30-26$ ls -lart /var/www/rented.co/public_html/
 ubuntu@ip-172-31-30-26:~/repo_rented_do_not_delete$ ls -lart /var/www/rented.co/experian/
 
 
