--- a/README
+++ b/README
@@ -58,9 +58,13 @@ sudo apt-get install git
 --------------------
 sudo npm install forever -g
 
-4 - Install PM2:
+4 - Install PM2, Grunt, :
 --------------------
 sudo npm install pm2 -g
+sudo npm install grunt-cli -g
+
+$ cd /home/ubuntu/.npm
+$ sudo chown ubuntu:ubuntu *
 
 
 # On EC2 instance
@@ -116,6 +120,35 @@ ubuntu@ip-172-31-30-26:~/repo_rented_do_not_delete$ ls -lart /var/www/rented.co/
 
 
 
+**** Check Ubuntu version
+
+$ lsb_release -a
+No LSB modules are available.
+Distributor ID:	Ubuntu
+Description:	Ubuntu 14.04.1 LTS
+Release:	14.04
+Codename:	trusty
+
+
+**** OpenSSL
+# http://manpages.ubuntu.com/manpages/hardy/man1/version.1ssl.html
+# check latest versions @  http://www.openssl.org/
+$ openssl version
+OpenSSL 1.0.1f 6 Jan 2014
+
+# http://docs.aws.amazon.com/opsworks/latest/userguide/workingsecurity-ssl.html
+$ openssl genrsa 2048 > privkey.pem
+
+
+# You can also generate a self-signed certificate, which can be used for testing purposes only. For this example, use the following command line to generate a self-signed certificate.
+$ openssl x509 -req -days 365 -in csr.pem -signkey privkey.pem -out server.crt
+
+
+
+
+
+Current questions to be moved to wiki Q&A
+Should Nginx be installed in /usr/sbin/nginx  ?
 
 
 
